--- a/qs_pers/views/views.xml
+++ b/qs_pers/views/views.xml
@@ -10,8 +10,6 @@
                     <field name="mobil_name_sale"/>
                     <field name="email_sale"/>
                 </field>
-
-
             </field>
         </record>
 
@@ -28,7 +26,6 @@
 
             </field>
         </record>
-
 
         <record id="view_partner_form_inherited" model="ir.ui.view">
             <field name="name">base.view_partner_form.inherited</field>
@@ -49,7 +46,6 @@
             </field>
         </record>
 
-
         <record id="sale_view_form_inherited" model="ir.ui.view">
             <field name="name">sale.view_order_form.inherited</field>
             <field name="model">sale.order</field>
@@ -63,7 +59,6 @@
                        position="attributes">
                     <attribute name="readonly">1</attribute>
                 </xpath>
-
                 <field name="payment_term_id" position="attributes">
                     <attribute name="groups">sales_team.group_sale_manager</attribute>
                 </field>
@@ -74,7 +69,10 @@
                     <field name="compute_field_sale" invisible="1"/>
                 </field>
                 <field name="pricelist_id" position="attributes">
-                    <attribute name="attrs">{'readonly': [('compute_field_sale', '=', True)]}</attribute>
+                    <attribute name="attrs">{'invisible': [('compute_field_sale', '=', True)]}</attribute>
+                </field>
+                <field name="pricelist_id" position="after">
+                    <field name="show_pricelist"/>
                 </field>
 
                 <xpath expr="//page[@name='other_information']" position="attributes">
@@ -92,8 +90,6 @@
                 <field name="note" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </field>
-
-
                 <xpath expr="//button[@name='payment_action_capture']" position="attributes">
                     <attribute name="groups">stock.group_stock_manager</attribute>
                 </xpath>
@@ -110,18 +106,9 @@
                     <attribute name="groups">sales_team.group_sale_manager</attribute>
                 </xpath>
                 <xpath expr="//button[@name='action_view_delivery']" position="attributes">
-                    <attribute name="groups">stock.group_stock_manager</attribute>
+                    <attribute name="groups">sales_team.group_sale_manager,qs_pers_inv.group_magasinier</attribute>
                 </xpath>
-                <!--<xpath expr="//form[1]/header[1]/button[@name='290'][2]" position="attributes">
-                    <attribute name="groups">sales_team.group_sale_manager,stock.group_stock_manager</attribute>
-                </xpath>-->
-                <!--<xpath expr="//form[1]/header[1]/button[@name='290'][1]" position="attributes">
-                    <attribute name="groups">sales_team.group_sale_manager,stock.group_stock_manager</attribute>
-                </xpath>-->
-
             </field>
         </record>
-
-
     </data>
 </odoo>
