--- a/qs_pers_inv/views/security.xml
+++ b/qs_pers_inv/views/security.xml
@@ -67,7 +67,7 @@
             <field name="perm_create" eval="False"/>
             <field name="perm_read" eval="True"/>
             <field name="perm_unlink" eval="False"/>
-            <field name="perm_write" eval="True"/>
+            <field name="perm_write" eval="False"/>
         </record>
         <record id="stock.access_stock_picking_user" model="ir.model.access">
             <field name="active" eval="True"/>
