--- a/qs_pers_acc/views/views.xml
+++ b/qs_pers_acc/views/views.xml
@@ -27,12 +27,12 @@
 
                 <xpath expr="//label[@for='standard_price']" position="attributes">
                     <!-- Add your fields or attributes here -->
-                    <attribute name="groups">base.group_erp_manager</attribute>
+                    <attribute name="groups">base.group_erp_manager,sales_team.group_sale_manager</attribute>
                 </xpath>
 
                 <xpath expr="//div[@name='standard_price_uom']" position="attributes">
                     <!-- Add your fields or attributes here -->
-                    <attribute name="groups">base.group_erp_manager</attribute>
+                    <attribute name="groups">base.group_erp_manager,sales_team.group_sale_manager</attribute>
                 </xpath>
 
             </field>
@@ -45,7 +45,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='standard_price']" position="attributes">
                     <!-- Add your fields or attributes here -->
-                    <attribute name="groups">base.group_erp_manager</attribute>
+                    <attribute name="groups">base.group_erp_manager,sales_team.group_sale_manager</attribute>
                 </xpath>
 
             </field>
