--- a/qs_pers_acc/views/views.xml
+++ b/qs_pers_acc/views/views.xml
@@ -20,7 +20,7 @@
         </record>
         <!-- Inherit Form View to Modify it -->
         <record id="product_view_order_form_inherited" model="ir.ui.view">
-            <field name="name"> product.template.common.form.inherited</field>
+            <field name="name">product.template.common.form.inherited</field>
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_form_view"/>
             <field name="arch" type="xml">
@@ -67,6 +67,17 @@
                     <attribute name="invisible">1</attribute>
                 </xpath>
 
+            </field>
+        </record>
+        <!-- Inherit Form View to Modify it -->
+        <record id="product_template_only_form_view_inherited" model="ir.ui.view">
+            <field name="name">product.product_template_only_form_view.inherited</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_only_form_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//button[@name='action_update_quantity_on_hand']" position="attributes">
+                    <attribute name="groups">base.group_erp_manager</attribute>
+                </xpath>
             </field>
         </record>
         <!-- Inherit Form View to Modify it -->
