--- a/qs_pers_inv_ticket/views/views.xml
+++ b/qs_pers_inv_ticket/views/views.xml
@@ -18,10 +18,10 @@
             <field name="model">stock.quant</field>
             <field name="inherit_id" ref="stock.view_stock_quant_tree_inventory_editable"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='product_id']" position="attributes">
+                <!--<xpath expr="//field[@name='product_id']" position="attributes">
                     <attribute name="invisible">1</attribute>
-                </xpath>
-                <xpath expr="//field[@name='product_id']" position="after">
+                </xpath>-->
+                <xpath expr="//field[@name='product_id']" position="before">
                     <field name="product_ref"/>
                     <field name="product_name"/>
                 </xpath>
