--- a/qs_pers/views/views.xml
+++ b/qs_pers/views/views.xml
@@ -59,14 +59,17 @@
                        position="attributes">
                     <attribute name="readonly">1</attribute>
                 </xpath>
-                <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='tax_id']"
+                <!--<xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='tax_id']"
                        position="attributes">
                     <attribute name="groups">sales_team.group_sale_manager</attribute>
-                </xpath>
+                </xpath>-->
                 <field name="payment_term_id" position="attributes">
                     <attribute name="groups">sales_team.group_sale_manager</attribute>
                 </field>
                 <button name="action_quotation_send" position="attributes">
+                    <attribute name="groups">sales_team.group_sale_manager</attribute>
+                </button>
+                <button name="update_prices" position="attributes">
                     <attribute name="groups">sales_team.group_sale_manager</attribute>
                 </button>
                 <field name="pricelist_id" position="after">
