--- a/qs_pers/views/views.xml
+++ b/qs_pers/views/views.xml
@@ -77,9 +77,9 @@
                 <button name="action_quotation_send" position="attributes">
                     <attribute name="groups">sales_team.group_sale_manager</attribute>
                 </button>
-                <button name="update_prices" position="attributes">
+                <!--<button name="update_prices" position="attributes">
                     <attribute name="groups">sales_team.group_sale_manager</attribute>
-                </button>
+                </button>-->
                 <field name="pricelist_id" position="after">
                     <field name="compute_field_sale" invisible="1"/>
                 </field>
