FEAT(qs_inv_ticket): Add note d'achat on stock.picking

--- a/qs_pers_inv_ticket/views/views.xml
+++ b/qs_pers_inv_ticket/views/views.xml
@@ -8,6 +8,7 @@
 
                 <xpath expr="//field[@name='origin']" position="before">
                     <field name="ticket_number"/>
+                    <field name="ref_number"/>
                 </xpath>
 
             </field>
