--- a/qs_pers/views/views.xml
+++ b/qs_pers/views/views.xml
@@ -58,6 +58,10 @@
                        position="attributes">
                     <attribute name="invisible">1</attribute>
                 </xpath>
+                <!--<xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='price_unit']"
+                       position="after">
+                    <field name="price_unit_comparison"/>
+                </xpath>-->
 
                 <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='price_unit']"
                        position="replace">
@@ -69,6 +73,7 @@
                     />
 
                 </xpath>
+
                 <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='price_unit']"
                        position="after">
                     <field name="tax_id_name"/>
