--- a/qs_pers/views/product_template_view.xml
+++ b/qs_pers/views/product_template_view.xml
@@ -10,6 +10,23 @@
                 <xpath expr="//field[@name='list_price']" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </xpath>
+                <xpath expr="//field[@name='name']" position="after">
+                    <field name="repere"/>
+                </xpath>
+            </field>
+        </record>
+        <!-- Inherit Form View to Modify it -->
+        <record id="product_template_only_form_view_inherit" model="ir.ui.view">
+            <field name="name">product.product_template_only_form_view.inherit</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_only_form_view"/>
+            <field name="arch" type="xml">
+
+                <xpath expr="//field[@name='transport']" position="after">
+                    <field name="repere"/>
+                    <!-- Add your fields or attributes here -->
+                </xpath>
+
             </field>
         </record>
     </data>
