--- a/qs_pers/views/product_template_view.xml
+++ b/qs_pers/views/product_template_view.xml
@@ -26,6 +26,39 @@
                     <field name="repere"/>
                     <!-- Add your fields or attributes here -->
                 </xpath>
+                <xpath expr="//label[@for='list_price']" position="replace">
+                    <label for="detail_price" class="mt-1"/>
+                    <div name="pricing">
+                        <field name="detail_price" class="oe_inline" widget="monetary"
+                               options="{'currency_field': 'currency_id', 'field_digits': True}" on_change="1"
+                               modifiers="{}"/>
+                    </div>
+                    <!-- Add your fields or attributes here -->
+                </xpath>
+                <xpath expr="//field[@name='tax_string']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+
+                </xpath>
+                <xpath expr="//field[@name='list_price']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+
+            </field>
+        </record>
+        <!-- Inherit Form View to Modify it -->
+        <record id="product_template_kanban_view_inherit" model="ir.ui.view">
+            <field name="name">Product.template.product.kanban.inherit</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_kanban_view"/>
+            <field name="arch" type="xml">
+
+                <xpath expr="//div[@name='product_lst_price']" position="replace">
+                    <div name="product_lst_price" class="mt-1">
+                        PV DET(MGA) : <field name="detail_price" widget="monetary"
+                                      options="{'currency_field': 'currency_id', 'field_digits': True}"/>
+                    </div>
+                    <!-- Add your fields or attributes here -->
+                </xpath>
 
             </field>
         </record>
