--- a/qs_pers_inv/views/stock_valuation_view.xml
+++ b/qs_pers_inv/views/stock_valuation_view.xml
@@ -9,6 +9,7 @@
             <field name="priority" eval="8"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='product_id']" position="after">
+                    <field name="reference"/>
                     <field name="source_location"/>
                     <field name="destination_location"/>
                 </xpath>
