--- a/qs_pers_inv/views/stock_move_line_view.xml
+++ b/qs_pers_inv/views/stock_move_line_view.xml
@@ -12,5 +12,22 @@
                 </xpath>
             </field>
         </record>
+        <!-- Inherit Form View to Modify it -->
+        <record id="view_move_line_form_inherit" model="ir.ui.view">
+            <field name="name">	stock.view_move_line_form.inherit</field>
+            <field name="model">stock.move.line</field>
+            <field name="inherit_id" ref="stock.view_move_line_form"/>
+            <field name="arch" type="xml">
+
+                <xpath expr="//field[@name='location_dest_id']" position="after">
+                    <field name="picking_id"/>
+                    <field name="ticket_number_pos"/>
+                    <field name="ticket_number_sale"/>
+                    <field name="ticket_number_sale_stock"/>
+                    <field name="ticket_number_invoice"/>
+                </xpath>
+
+            </field>
+        </record>
     </data>
 </odoo>
