--- a/qs_pers/views/product_template_view.xml
+++ b/qs_pers/views/product_template_view.xml
@@ -19,11 +19,12 @@
         <record id="product_template_only_form_view_inherit" model="ir.ui.view">
             <field name="name">product.product_template_only_form_view.inherit</field>
             <field name="model">product.template</field>
-            <field name="inherit_id" ref="product.product_template_only_form_view"/>
+            <field name="inherit_id" ref="product.product_template_form_view"/>
             <field name="arch" type="xml">
 
                 <xpath expr="//field[@name='transport']" position="after">
                     <field name="repere"/>
+                    <field name="ttc_logic" widget="boolean_toggle"/>
                     <!-- Add your fields or attributes here -->
                 </xpath>
                 <xpath expr="//label[@for='list_price']" position="replace">
