--- a/qs_pers/views/views.xml
+++ b/qs_pers/views/views.xml
@@ -28,7 +28,7 @@
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
-                <field name="vat" position="after">
+                <field name="vat" position="before">
                     <field name="compute_field" invisible="1"/>
                     <field name="credit_limit" attrs="{'readonly': [('compute_field', '=', True)]}"
                            groups="sales_team.group_sale_manager"/>
