--- a/qs_pers_acc/views/account_move.xml
+++ b/qs_pers_acc/views/account_move.xml
@@ -1,121 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>
-
-        <record id="view_move_form_inherited" model="ir.ui.view">
-            <field name="name"> account.view_move_form.inherited</field>
-            <field name="model">account.move</field>
-            <field name="inherit_id" ref="account.view_move_form"/>
-            <field name="priority" eval="8"/>
-            <field name="arch" type="xml">
-                <xpath expr="//notebook" position="inside">
-                    <page id="marge_tab"
-                          string="Analyse des marges"
-                          attrs="{'invisible': [('move_type', '=', 'entry')]}" groups="qs_pers_acc.team_erp_manager">
-                        <field name="for_price_list_ids"
-                               widget="section_and_note_one2many"
-                               mode="tree,kanban"
-                               context="{'default_move_type': context.get('default_move_type'), 'journal_id': journal_id, 'default_partner_id': commercial_partner_id, 'default_currency_id': currency_id or company_currency_id}"
-                        >
-
-
-                            <tree editable="bottom" string="Journal Items"
-                                  default_order="sequence, date desc, move_name desc, id">
-                                <control>
-                                    <create name="add_line_control" string="Add a line"/>
-                                    <create name="add_section_control" string="Add a section"
-                                            context="{'default_display_type': 'line_section'}"/>
-                                    <create name="add_note_control" string="Add a note"
-                                            context="{'default_display_type': 'line_note'}"/>
-                                </control>
-
-                                <!-- Displayed fields -->
-                                <field name="sequence" widget="handle"/>
-                                <field name="move_name" invisible="1"/>
-                                <field name="product_id"
-                                       optional="show"
-                                       domain="
-                                                    context.get('default_move_type') in ('out_invoice', 'out_refund', 'out_receipt')
-                                                    and [('sale_ok', '=', True), '|', ('company_id', '=', False), ('company_id', '=', parent.company_id)]
-                                                    or [('purchase_ok', '=', True), '|', ('company_id', '=', False), ('company_id', '=', parent.company_id)]
-                                               "/>
-                                <field name="price_unit_qsoa" widget="monetary"/>
-                                <!--<field name="transport" widget="monetary"/>-->
-                                <field name="pv_det_qsoa" widget="monetary"/>
-                                <field name="pv_det_qsoa_marge" widget="percentage"/>
-                                <!--<field name="pv_gros" widget="monetary"/>
-                                <field name="pv_gros_marge" widget="percentage"/>
-                                <field name="pv_cr1" widget="monetary"/>
-                                <field name="pv_cr1_marge" widget="percentage"/>
-                                <field name="pv_cr2" widget="monetary"/>
-                                <field name="pv_cr2_marge" widget="percentage"/>
-                                <field name="pv_cr3" widget="monetary"/>
-                                <field name="pv_cr3_marge" widget="percentage"/>
-                                <field name="pv_cr4" widget="monetary"/>
-                                <field name="pv_cr4_marge" widget="percentage"/>-->
-
-                                <field name="name" widget="section_and_note_text"
-                                       attrs="{'required': [('parent.move_type', 'not in', ('in_invoice', 'in_refund','in_receipt'))]}"
-                                       invisible="1"/>
-                                <field name="account_id"
-                                       groups="account.group_account_readonly"
-                                       options="{'no_create': True}"
-                                       domain="[('deprecated', '=', False), ('user_type_id.type', 'not in', ('receivable', 'payable')), ('company_id', '=', parent.company_id), ('is_off_balance', '=', False)]"
-                                       attrs="{'required': [('display_type', '=', False)]}" invisible="1"/>
-                                <field name="analytic_account_id"
-                                       domain="['|', ('company_id', '=', False), ('company_id', '=', parent.company_id)]"
-                                       groups="analytic.group_analytic_accounting"
-                                       optional="show" invisible="1"/>
-                                <field name="analytic_tag_ids"
-                                       domain="['|', ('company_id', '=', False), ('company_id', '=', parent.company_id)]"
-                                       groups="analytic.group_analytic_tags"
-                                       optional="show"
-                                       widget="many2many_tags" invisible="1"/>
-                                <field name="quantity" invisible="1"/>
-                                <field name="product_uom_category_id" invisible="1"/>
-                                <field name="product_uom_id" string="UoM" groups="uom.group_uom" optional="show"
-                                       invisible="1"/>
-                                <field name="price_unit" string="Price" invisible="1"/>
-                                <field name="discount" string="Disc.%" optional="hide" invisible="1"/>
-                                <field name="tax_ids" widget="many2many_tags"
-                                       domain="[('type_tax_use', '=?', parent.invoice_filter_type_domain), ('company_id', '=', parent.company_id), ('country_id', '=', parent.tax_country_id)]"
-                                       context="{'append_type_to_tax_name': not parent.invoice_filter_type_domain}"
-                                       options="{'no_create': True}"
-                                       optional="show" invisible="1"/>
-                                <field name="price_subtotal"
-                                       string="Subtotal"
-                                       groups="account.group_show_line_subtotals_tax_excluded" invisible="1"/>
-                                <field name="price_total"
-                                       string="Total"
-                                       groups="account.group_show_line_subtotals_tax_included" invisible="1"/>
-
-                                <!-- Others fields -->
-                                <field name="partner_id" invisible="1"/>
-                                <field name="amount_currency" invisible="1"/>
-                                <field name="currency_id" invisible="1"/>
-                                <field name="debit" invisible="1"/>
-                                <field name="credit" invisible="1"/>
-                                <field name="date" invisible="1"/>
-                                <field name="date_maturity" invisible="1"/>
-
-                                <field name="group_tax_id" invisible="1"/>
-                                <field name="tax_line_id" invisible="1"/>
-                                <field name="tax_repartition_line_id" invisible="1"/>
-                                <field name="tax_tag_ids" invisible="1"/>
-                                <field name="tax_base_amount" invisible="1"/>
-                                <field name="company_id" invisible="1"/>
-                                <field name="company_currency_id" invisible="1"/>
-                                <field name="recompute_tax_line" invisible="1" force_save="1"/>
-                                <field name="display_type" force_save="1" invisible="1"/>
-                                <field name="is_rounding_line" invisible="1"/>
-                                <field name="exclude_from_invoice_tab" invisible="1"/>
-                                <field name="account_internal_type" invisible="1"/>
-                                <field name="account_internal_group" invisible="1"/>
-                            </tree>
-                        </field>
-                    </page>
-                </xpath>
-            </field>
-        </record>
-    </data>
+       <data>
+              <record id="view_move_form_inherited" model="ir.ui.view">
+                     <field name="name"> account.view_move_form.inherited</field>
+                     <field name="model">account.move</field>
+                     <field name="inherit_id" ref="account.view_move_form" />
+                     <field name="priority" eval="8" />
+                     <field name="arch" type="xml">
+                            <xpath expr="//notebook" position="inside">
+                                   <page id="marge_tab" string="Analyse des marges" groups="qs_pers_acc.team_erp_manager">
+                                          <field name="product_pricelist_ids" widget="section_and_note_one2many" mode="tree,kanban" context="{'default_move_type': context.get('default_move_type'), 'journal_id': journal_id, 'default_partner_id': commercial_partner_id, 'default_currency_id': currency_id or company_currency_id}">
+                                                 <tree editable="False" force_save="1" string="Journal Items">
+                                                        <field name="display_name" string="Articles" />
+                                                        <field name="tmpl_price" string="Prix d'achat" widget="monetary" />
+                                                        <field name="transport" string="Transport" widget="monetary" />
+                                                        <field name="pc_det" widget="monetary" string="PV DET" />
+                                                        <field name="pc_det_marge" string="%PV DET" widget="percentage" />
+                                                        <field name="pc_gros" widget=" monetary" string=" PV GROS" />
+                                                        <field name="pc_gros_marge" string="%PV GROS" widget="percentage" />
+                                                        <field name="pc_cr1" widget=" monetary" string=" PV CR1" />
+                                                        <field name="pc_cr1_marge" string="%PV CR1" widget="percentage" />
+                                                        <field name="pc_cr2" widget=" monetary" string=" PV CR2" />
+                                                        <field name="pc_cr2_marge" string="%PV CR2" widget="percentage" />
+                                                        <field name="pc_cr3" widget=" monetary" string=" PV CR3" />
+                                                        <field name="pc_cr3_marge" string="%PV CR3" widget="percentage" />
+                                                        <field name="pc_cr4" widget=" monetary" string=" PV CR4" />
+                                                        <field name="pc_cr4_marge" string="%PV CR4" widget="percentage" />
+                                                        <field name="currency_id" invisible=" 1" />
+                                                 </tree>
+                                          </field>
+                                   </page>
+                            </xpath>
+                     </field>
+              </record>
+       </data>
 </odoo>
