--- a/qs_pers_acc/views/security.xml
+++ b/qs_pers_acc/views/security.xml
@@ -2,17 +2,17 @@
 <odoo>
     <data>
         <record id="account.access_account_move_uinvoice" model="ir.model.access">
-            <field name="active" eval="True"/>
-            <field name="group_id" ref="account.group_account_invoice"/>
-            <field name="model_id" ref="account.model_account_move"/>
+            <field name="active" eval="True" />
+            <field name="group_id" ref="account.group_account_invoice" />
+            <field name="model_id" ref="account.model_account_move" />
             <field name="name">account.move</field>
-            <field name="perm_create" eval="True"/>
-            <field name="perm_read" eval="True"/>
-            <field name="perm_unlink" eval="False"/>
-            <field name="perm_write" eval="True"/>
+            <field name="perm_create" eval="True" />
+            <field name="perm_read" eval="True" />
+            <field name="perm_unlink" eval="False" />
+            <field name="perm_write" eval="True" />
         </record>
         <!-- Inherit Form View to Modify it -->
-        <record id="account_move_form_inherited" model="ir.ui.view">
+        <!-- <record id="account_move_form_inherited" model="ir.ui.view">
             <field name="name">account.move.form.inherited</field>
             <field name="model">account.move</field>
             <field name="inherit_id" ref="account.view_move_form"/>
@@ -24,6 +24,6 @@
                     <attribute name="groups">account.group_account_user</attribute>
                 </xpath>
             </field>
-        </record>
+        </record> -->
     </data>
 </odoo>
