--- a/qs_sale/report/sale_report_templates.xml
+++ b/qs_sale/report/sale_report_templates.xml
@@ -6,7 +6,7 @@
             <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)"/>
         </t>
     </template>
-    <template id="qs_report_saleorder_pro_forma">
+    <template id="sale.report_saleorder_pro_forma">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-value="doc">
                 <t t-call="qs_sale.qs_report_saleorder_document" t-lang="doc.partner_id.lang" />
