--- a/qs_account/views/account_move_views.xml
+++ b/qs_account/views/account_move_views.xml
@@ -17,6 +17,15 @@
                     <field name="is_charge" />
                 </div>
             </div>
+            <xpath expr="//form" position="attributes">
+                <attribute name="edit">false</attribute>
+            </xpath>
+            <button name="action_reverse" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </button>
+            <button name="button_draft" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </button>
         </field>
     </record>
 
@@ -31,6 +40,17 @@
             <filter name="salesperson" position="after">
                 <filter name="group_is_charge" context="{'group_by': 'is_charge'}"/>
             </filter>
+        </field>
+    </record>
+
+    <record id="view_account_payment_form_inherit" model="ir.ui.view">
+        <field name="name">account.payment.form.inherit</field>
+        <field name="model">account.payment</field>
+        <field name="inherit_id" ref="account.view_account_payment_form" />
+        <field name="arch" type="xml">
+            <button name="action_draft" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </button>
         </field>
     </record>
 </odoo>
