--- a/qs_account/views/account_move_views.xml
+++ b/qs_account/views/account_move_views.xml
@@ -17,14 +17,14 @@
                     <field name="is_charge" />
                 </div>
             </div>
-            <xpath expr="//form" position="attributes">
-                <attribute name="edit">false</attribute>
+            <xpath expr="//field[@name='ref']" position="after">
+                <field name="is_spec" invisible="1"/>
             </xpath>
             <button name="action_reverse" position="attributes">
-                <attribute name="invisible">1</attribute>
+                <attribute name="attrs">{'invisible': [('is_spec', '=', True)]}</attribute>
             </button>
             <button name="button_draft" position="attributes">
-                <attribute name="invisible">1</attribute>
+                <attribute name="attrs">{'invisible': [('is_spec', '=', True)]}</attribute>
             </button>
         </field>
     </record>
@@ -48,8 +48,11 @@
         <field name="model">account.payment</field>
         <field name="inherit_id" ref="account.view_account_payment_form" />
         <field name="arch" type="xml">
+            <field name="partner_id" position="after">
+                <field name="is_spec" invisible="1"/>
+            </field>
             <button name="action_draft" position="attributes">
-                <attribute name="invisible">1</attribute>
+                <attribute name="attrs">{'invisible': [('is_spec', '=', True)]}</attribute>
             </button>
         </field>
     </record>
